fix rcon, acl hosts

--- a/python3.yml
+++ b/python3.yml
@@ -10,3 +10,8 @@
       apt:
         name: python3
         state: present
+    - name: Install ACL
+      apt:
+        name: acl
+        state: present
+        
