--- a/rust3.yml
+++ b/rust3.yml
@@ -23,4 +23,4 @@
       ansible.builtin.lineinfile:
         path: /home/rustserver/lgsm/config-lgsm/rustserver/secrets-rustserver.cfg
         regexp: '^rconpassword="holly3fun!"'
-        line: 'rconpassword="holly3fun!"'
+        line: 'rconpassword="${RCON_PASSWORD}"'
