--- a/rust-config.yml
+++ b/rust-config.yml
@@ -43,20 +43,20 @@
     - name: Rust server tags
       ansible.builtin.lineinfile:
         path: /home/rustserver/serverfiles/server/rustserver/cfg/server.cfg
-        regexp: "^server.tags"
-        line: "server.tags {{ server_tags }}"
+        regexp: '^server.tags'
+        line: 'server.tags "{{ server_tags }}"'
     - name: Rust maxplayers=50
       ansible.builtin.lineinfile:
         path: /home/rustserver/lgsm/config-lgsm/rustserver/rustserver.cfg
         regexp: '^maxplayers='
-        line: 'maxplayers={{ server_maxplayers }}'
+        line: 'maxplayers="{{ server_maxplayers }}"'
     - name: Rust worldsize=4000
       ansible.builtin.lineinfile:
         path: /home/rustserver/lgsm/config-lgsm/rustserver/rustserver.cfg
         regexp: '^worldsize='
-        line: 'worldsize={{ server_worldsize }}'
+        line: 'worldsize="{{ server_worldsize }}"'
     - name: Rust servername
       ansible.builtin.lineinfile:
         path: /home/rustserver/lgsm/config-lgsm/rustserver/rustserver.cfg
         regexp: '^servername='
-        line: 'servername={{ server_name }}'
+        line: 'servername="{{ server_name }}"'
