--- a/rust-install.yml
+++ b/rust-install.yml
@@ -22,7 +22,7 @@
       - jq
       - tmux
       - netcat
-      - lib32gcc-s1
+      - lib32gcc1
       - lib32stdc++6
       - steamcmd
       - lib32z1
