use float for version

--- a/rust-install.yml
+++ b/rust-install.yml
@@ -81,13 +81,17 @@
         name: "{{ lgsm_prereqs_20_04 }}"
         update_cache: yes
         state: present
-      when: (ansible.facts['ansible_distribution_major_version'] == "20") and (ansible.facts['ansible_distribution_version'] <= "20.04")
+      when:
+        - ansible.facts['ansible_distribution_major_version'] == "20"
+        - ansible.facts['ansible_distribution_version'] | float <= 20.04
     - name: Install prereqs (Ubuntu 20.10)
       apt:
         name: "{{ lgsm_prereqs_20_10 }}"
         update_cache: yes
         state: present
-      when: (ansible.facts['ansible_distribution_major_version'] == "20") and (ansible.facts['ansible_distribution_version'] >= "20.10")
+      when:
+        - ansible.facts['ansible_distribution_major_version'] == "20"
+        - ansible.facts['ansible_distribution_version'] | float >= 20.10
     - name: Download lgsm installer
       ansible.builtin.shell: "wget -O linuxgsm.sh https://linuxgsm.sh && chmod +x linuxgsm.sh && bash linuxgsm.sh rustserver"
       args:
