fix server seed reference

--- a/rust-config.yml
+++ b/rust-config.yml
@@ -79,5 +79,5 @@
       ansible.builtin.lineinfile:
         path: "{{ usr.home }}/lgsm/config-lgsm/rustserver/rustserver.cfg"
         regexp: '^seed='
-        line: 'servername="{{ server_seed }}"'
+        line: 'seed="{{ server_seed }}"'
       when: server_seed is defined
